--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -6,16 +6,35 @@ spring:
     name: apigateway-service
   cloud:
     gateway:
+      default-filters:
+      - name: GlobalFilter
+        args:
+          baseMessage: Spring Cloud Gateway Global Filter
+          preLogger: true
+          postLogger: true
       routes:
       - id: first-service
         uri: http://localhost:8081/
         predicates:
           - Path=/first-service/**
+        filters:
+          #- AddRequestHeader=first-request, first-request-header2
+          #- AddResponseHeader=first-response, first-response-header2
+          - CustomFilter
       - id: second-service
         uri: http://localhost:8082/
         predicates:
           - Path=/second-service/**
-
+        filters:
+          #- AddRequestHeader=second-request, second-requets-header2
+          #- AddResponseHeader=second-response, second-response-header2
+          - name: CustomFilter
+          - name: LoggingFilter
+            args:
+              baseMessage: Hi, there.
+              preLogger: true
+              postLogger: true
+              
 eureka:
   client:
     register-with-eureka: false
