--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 server:
   port: 8000
-  
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+      
 spring:
   application:
     name: apigateway-service
@@ -14,7 +21,7 @@ spring:
           postLogger: true
       routes:
       - id: first-service
-        uri: http://localhost:8081/
+        uri: lb://MY-FIRST-SERVICE
         predicates:
           - Path=/first-service/**
         filters:
@@ -22,7 +29,7 @@ spring:
           #- AddResponseHeader=first-response, first-response-header2
           - CustomFilter
       - id: second-service
-        uri: http://localhost:8082/
+        uri: lb://MY-SECOND-SERVICE
         predicates:
           - Path=/second-service/**
         filters:
@@ -34,10 +41,3 @@ spring:
               baseMessage: Hi, there.
               preLogger: true
               postLogger: true
-              
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:8761/eureka
