--- a/first-service/src/main/resources/application.yml
+++ b/first-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 
 server:
-  port: 8081
+  port: 0
   
 spring:
   application:
@@ -8,5 +8,9 @@ spring:
     
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
