--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -20,6 +20,14 @@ spring:
           preLogger: true
           postLogger: true
       routes:
+      - id: user-service
+        uri: lb://USER-SERVICE
+        predicates:
+          - Path=/user-service/**
+      - id: catalog-service
+        uri: lb://CATALOG-SERVICE
+        predicates:
+          - Path=/catalog-service/**
       - id: first-service
         uri: lb://MY-FIRST-SERVICE
         predicates:
