--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -2,10 +2,12 @@ server:
   port: 0
   
 spring:  application:
-    name: user-service
+    name: catalog-service
     
   h2:    console:      enabled: true
-
+      settings:
+        web-allow-others: true
+      path: /h2-console
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -16,15 +18,17 @@ spring:  application:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
+    show-sql: true
+    generate-ddl: true
     properties:
       hibernate:
         format_sql: true
         show_sql: true
         
 eureka:
-  instance:    instance-id: ${spring.application.name}:${server.port}  client:    register-with-eureka: true
+  instance:    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}${server.port}  client:    register-with-eureka: true
     fetch-registry: true
     service-url:      defaultZone: http://127.0.0.1:8761/eureka
-      
-greeting:
-  message: Welcome to the Simple E-commerce.
+
+logging:
+  level:    com.example.catalogservice: DEBUG
