--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>user-service</artifactId>
+	<artifactId>catalog-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>user-service</name>
+	<name>catalog-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
@@ -90,6 +90,13 @@
 	
 	<build>
 		<plugins>
+		  <plugin>
+			  <artifactId>maven-surefire-plugin</artifactId>
+				<version>2.10</version>
+				<configuration>
+				<useFile>false</useFile>
+			  </configuration>
+		    </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
