--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: 14875
   
 spring:  application:
     name: user-service
@@ -28,3 +28,15 @@ eureka:
       
 greeting:
   message: Welcome to the Simple E-commerce.
+
+logging:  level:    '[com.example.userservice]': DEBUG
+
+token:
+  expiration_time: 86400000
+  secret: user_token
+  
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
