actuator 추가 bootstrap.yml 적용

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/youjaewoong/spring-msa/tree/Configuratin-Service/git-local-repo
+          uri: file:///d:/dev/money/git-local-repo
