--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -31,9 +31,9 @@ greeting:
 
 logging:  level:    '[com.example.userservice]': DEBUG
 
-token:
-  expiration_time: 86400000
-  secret: user_token
+#token:
+#  expiration_time: 86400000
+#  secret: user_token
   
 management:
   endpoints:
