--- a/apigateway-service/build.gradle
+++ b/apigateway-service/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+	
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
 }
 
 dependencyManagement {
