--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   profiles:
     active: native
   cloud:
@@ -16,3 +21,8 @@ spring:
           uri: https://github.com/youjaewoong/spring-cloud-config
 #          username:
 #          password:
+management: 
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
