--- a/apigateway-service/build.gradle
+++ b/apigateway-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.0.2'
 }
 
 dependencyManagement {
