config-service 버그로 인한 토큰값및설정 값 각프로젝트에서 관리하도록 설정

--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,13 @@
-spring:
-  cloud:
-    config:
-      uri: http://127.0.0.1:8888
-      name: config-service
+#spring:
+#  cloud:
+#    config:
+#      uri: http://127.0.0.1:8888
+#      name: config-service
 #  profiles:#    active: dev
+
+token: 
+  expiration_time: 86400000
+  secret: user_token_native_user_service
+
+gateway:
+  ip: 192.168.219.101
