feign client 구현

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -83,6 +83,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
+        
+        <!-- Feign Clien -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
