--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -35,7 +35,7 @@ eureka:
 greeting:
   message: Welcome to the Simple E-commerce.
 
-logging:  level:    '[com.example.userservice]': DEBUG
+logging:  level:    com.example.userservice.client: DEBUG
 
 #token:
 #  expiration_time: 86400000
