--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -62,6 +62,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        
+        <!-- Kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
