--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,7 +3,12 @@ server:
   
 spring:  application:
     name: order-service
-    
+  zipkin:
+    base-url: http://127.0.0.1:9411
+    enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0
   h2:    console:      enabled: true
       settings:
         web-allow-others: true
