--- a/apigateway-service/build.gradle
+++ b/apigateway-service/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.0.2'
+	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus'
 }
 
 dependencyManagement {
