--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -87,6 +87,18 @@
             <version>2.2.3.RELEASE</version>
         </dependency> 
         
+        <!--  micrometer -->
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>     
+        
+		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
