--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -39,3 +39,9 @@ eureka:
 
 logging:
   level:    com.example.orderservice: DEBUG
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, httptrace, info, metrics, prometheus
