--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>userservice</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>user-service</artifactId>
+	<version>1.0</version>
 	<name>user-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
