--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -5,12 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.0</version>
+		<version>2.5.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>config-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+<!-- <version>0.0.1-SNAPSHOT</version> -->
+	<version>1.0</version>
 	<name>config-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
