--- a/apigateway-service/src/main/resources/bootstrap.yml
+++ b/apigateway-service/src/main/resources/bootstrap.yml
@@ -1,14 +1,12 @@
-#spring:
-#  cloud:
-#    config:
-#      uri: http://127.0.0.1:8888
-#      name: config-service
-#  profiles:
-#    active: dev
+spring:
+  cloud:
+    config:
+      uri: http://127.0.0.1:8888
+      name: ecommerce
 
-token: 
-  expiration_time: 86400000
-  secret: user_token_native_user_service
+#token: 
+#  expiration_time: 86400000
+#  secret: user_token_native_user_service
 
-gateway:
-  ip: 192.168.219.101
+#gateway:
+#  ip: 192.168.219.101
