--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,18 +1,18 @@
-#spring:
-#  cloud:
-#    config:
-#      uri: http://127.0.0.1:8888
-#      name: config-service
-#  profiles:#    active: dev
+spring:
+  cloud:
+    config:
+      uri: http://127.0.0.1:8888
+      name: config-service
+#  profiles:#    active: defalut
 
-token: 
-  expiration_time: 86400000
-  secret: user_token_native_user_service
+#token: 
+#  expiration_time: 86400000
+#  secret: user_token_native_user_service
 
-gateway:
-  ip: 192.168.219.101
+#gateway:
+#  ip: 192.168.219.101
   
-order_service:
-  url: http://order-service/order-service/%s/orders
-  exception: 
-    orders_is_empty: There is no item.
+#order_service:
+#  url: http://order-service/order-service/%s/orders
+#  exception: 
+#    orders_is_empty: There is no item.
