--- a/apigateway-service/src/main/resources/bootstrap.yml
+++ b/apigateway-service/src/main/resources/bootstrap.yml
@@ -4,9 +4,9 @@ spring:
       uri: http://127.0.0.1:8888
       name: ecommoerce
 
-#token: 
-#  expiration_time: 86400000
-#  secret: user_token_native_user_service
+token:
+  expiration_time: 86400000
+  secret: user_token_native_user_service
 
 #gateway:
 #  ip: 192.168.219.101
